# weather-in

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md
src/: lib.rs  main.rs  weather.rs
