[package]
name = "weather-in"
version = "0.1.0"
edition = "2021"
description = "A command-line tool for retrieving and displaying current weather information based on user-specified locations, leveraging the OpenWeatherMap API."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.8", features = ["derive"] }
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
serde = { version = "1.0.192", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }

[dev-dependencies]
dotenvy = "0.15.7"
